--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,6 +1,10 @@
 footer {
+	@extend .container;
+	width: 100%;
+	overflow: hidden;
 	padding: 60px 0 30px 0;
-	p, span {
+	p,
+	span {
 		color: $white;
 		font-weight: 200;
 		font-size: 18px;
