--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -2,12 +2,8 @@ header {
 	top: 0;
 	position: fixed;
 	width: 100%;
-
-	background: $white;
 	z-index: 4;
 	height: 75px;
-
-	box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.26);
 }
 
 .nav {
@@ -19,7 +15,6 @@ header {
 		padding: 0;
 		float: right;
 		padding-top: 20px;
-		background-color: #ffffff;
 		max-width: 100%;
 		height: 75px;
 		li {
@@ -39,7 +34,7 @@ header {
 				text-decoration: none;
 				position: relative;
 				&:hover {
-					color: $red;
+					color: $white;
 					&:after {
 						position: absolute;
 						content: "";
@@ -47,7 +42,7 @@ header {
 						left: 0;
 						right: 0;
 						height: 3px;
-						background-color: $red;
+						background-color: $white;
 					}
 				}
 			}
