--- a/src/scss/helpers/defaults.scss
+++ b/src/scss/helpers/defaults.scss
@@ -4,14 +4,15 @@
 	padding: 6em 8em 12em 8em;
 	text-align: center;
 }
-
+div#shadow {
+	overflow: hidden;
+}
 .warning {
 	color: $red;
 }
 
 section {
 	min-height: calc(100vh - 169px);
-	background: $white;
 	padding: 10% 0 45px 0;
 }
 
@@ -120,3 +121,17 @@ footer {
 		-webkit-transform: scaleY(1);
 	}
 }
+
+/*
+div#root:before {
+	content: "";
+	width: 100vw;
+	height: 100vh;
+	box-shadow: inset 0px 0px 0px 5rem rgb(0, 0, 0);
+	display: block;
+	position: fixed;
+	z-index: 3;
+	left: 0;
+	right: 0;
+	top: 0;
+}*/
