--- a/src/scss/helpers/typo.scss
+++ b/src/scss/helpers/typo.scss
@@ -45,50 +45,55 @@ $header-bg-position: 75px;
 body {
 	font-family: $font-default;
 	font-weight: normal;
-	font-size: 16px;
+	font-size: $f-smed;
+	text-align: left;
 	margin: 0;
 	transition: all 0.3s ease 0s;
 	background: $white;
 }
 
-.container {
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-family: $font-header;
-		font-weight: 100;
-	}
-	h1 {
-		font-size: $f-xmed;
-		line-height: 2 + $f-xmed;
-	}
-	h2 {
-		font-size: $f-mmed;
-		line-height: 2 + $f-mmed;
-	}
-	h3 {
-		font-size: $f-med;
-		line-height: 2 + $f-med;
-	}
-	p,
-	a,
-	li,
-	td,
-	th {
-		font-size: 17px;
-		font-weight: 300;
-		line-height: 1.3;
-	}
-	li {
-		padding-bottom: 10px;
-	}
+nav {
+	font-family: $font-header;
+	font-size: $f-med;
+	text-transform: uppercase;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: $font-header;
+	font-weight: 100;
+}
+h1 {
+	font-size: $f-xmed;
+	line-height: 2 + $f-xmed;
+}
+h2 {
+	font-size: $f-mmed;
+	line-height: 2 + $f-mmed;
+}
+h3 {
+	font-size: $f-med;
+	line-height: 2 + $f-med;
+}
+p,
+a,
+li,
+td,
+th {
+	font-size: $f-smed;
+	font-weight: 300;
+	line-height: 1.3;
+}
+li {
+	padding-bottom: 10px;
 }
 
 .button {
-	font-family: $font-default;
+	font-family: $font-header;
 	font-weight: bold;
 }
 
@@ -98,53 +103,93 @@ body {
 	text-align: center;
 }
 
-
 .logo {
-	animation: textShadow 5.6s infinite; 
+	animation: textShadow 5.6s infinite;
 }
 
-
-
 @keyframes textShadow {
-  0% {
-    text-shadow: 0.43899px 0 1px rgba(0, 30, 255, 0.5), -0.43899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  5% {
-    text-shadow: 2.7929px 0 1px rgba(0, 30, 255, 0.5), -2.7929px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  10% {
-    text-shadow: 0.02956px 0 1px rgba(0, 30, 255, 0.5), -0.02956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  15% {
-    text-shadow: 0.40219px 0 1px rgba(0, 30, 255, 0.5), -0.40219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  20% {
-    text-shadow: 3.4794px 0 1px rgba(0, 30, 255, 0.5), -3.4794px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  25% {
-    text-shadow: 1.61256px 0 1px rgba(0, 30, 255, 0.5), -1.61256px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  30% {
-    text-shadow: 0.70156px 0 1px rgba(0, 30, 255, 0.5), -0.70156px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  35% {
-    text-shadow: 3.89691px 0 1px rgba(0, 30, 255, 0.5), -3.89691px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  40% {
-    text-shadow: 3.87091px 0 1px rgba(0, 30, 255, 0.5), -3.87091px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  45% {
-    text-shadow: 2.23106px 0 1px rgba(0, 30, 255, 0.5), -2.23106px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  50% {
-    text-shadow: 0.08084px 0 1px rgba(0, 30, 255, 0.5), -0.08084px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  55% {
-    text-shadow: 2.37585px 0 1px rgba(0, 30, 255, 0.5), -2.37585px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  60% {
-    text-shadow: 2.20219px 0 1px rgba(0, 30, 255, 0.5), -2.20219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  65% {
-    text-shadow: 2.86388px 0 1px rgba(0, 30, 255, 0.5), -2.86388px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  70% {
-    text-shadow: 0.48874px 0 1px rgba(0, 30, 255, 0.5), -0.48874px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  75% {
-    text-shadow: 1.89485px 0 1px rgba(0, 30, 255, 0.5), -1.89485px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  80% {
-    text-shadow: 0.0833px 0 1px rgba(0, 30, 255, 0.5), -0.0833px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  85% {
-    text-shadow: 0.0977px 0 1px rgba(0, 30, 255, 0.5), -0.0977px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  90% {
-    text-shadow: 3.44334px 0 1px rgba(0, 30, 255, 0.5), -3.44334px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  95% {
-    text-shadow: 2.18418px 0 1px rgba(0, 30, 255, 0.5), -2.18418px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; }
-  100% {
-    text-shadow: 2.62088px 0 1px rgba(0, 30, 255, 0.5), -2.62088px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px; } }
+	0% {
+		text-shadow: 0.43899px 0 1px rgba(0, 30, 255, 0.5),
+			-0.43899px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	5% {
+		text-shadow: 2.7929px 0 1px rgba(0, 30, 255, 0.5),
+			-2.7929px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	10% {
+		text-shadow: 0.02956px 0 1px rgba(0, 30, 255, 0.5),
+			-0.02956px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	15% {
+		text-shadow: 0.40219px 0 1px rgba(0, 30, 255, 0.5),
+			-0.40219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	20% {
+		text-shadow: 3.4794px 0 1px rgba(0, 30, 255, 0.5),
+			-3.4794px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	25% {
+		text-shadow: 1.61256px 0 1px rgba(0, 30, 255, 0.5),
+			-1.61256px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	30% {
+		text-shadow: 0.70156px 0 1px rgba(0, 30, 255, 0.5),
+			-0.70156px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	35% {
+		text-shadow: 3.89691px 0 1px rgba(0, 30, 255, 0.5),
+			-3.89691px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	40% {
+		text-shadow: 3.87091px 0 1px rgba(0, 30, 255, 0.5),
+			-3.87091px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	45% {
+		text-shadow: 2.23106px 0 1px rgba(0, 30, 255, 0.5),
+			-2.23106px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	50% {
+		text-shadow: 0.08084px 0 1px rgba(0, 30, 255, 0.5),
+			-0.08084px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	55% {
+		text-shadow: 2.37585px 0 1px rgba(0, 30, 255, 0.5),
+			-2.37585px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	60% {
+		text-shadow: 2.20219px 0 1px rgba(0, 30, 255, 0.5),
+			-2.20219px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	65% {
+		text-shadow: 2.86388px 0 1px rgba(0, 30, 255, 0.5),
+			-2.86388px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	70% {
+		text-shadow: 0.48874px 0 1px rgba(0, 30, 255, 0.5),
+			-0.48874px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	75% {
+		text-shadow: 1.89485px 0 1px rgba(0, 30, 255, 0.5),
+			-1.89485px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	80% {
+		text-shadow: 0.0833px 0 1px rgba(0, 30, 255, 0.5),
+			-0.0833px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	85% {
+		text-shadow: 0.0977px 0 1px rgba(0, 30, 255, 0.5),
+			-0.0977px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	90% {
+		text-shadow: 3.44334px 0 1px rgba(0, 30, 255, 0.5),
+			-3.44334px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	95% {
+		text-shadow: 2.18418px 0 1px rgba(0, 30, 255, 0.5),
+			-2.18418px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+	100% {
+		text-shadow: 2.62088px 0 1px rgba(0, 30, 255, 0.5),
+			-2.62088px 0 1px rgba(255, 0, 80, 0.3), 0 0 3px;
+	}
+}
