--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,13 +1,48 @@
 footer {
-	@extend .container;
-	width: 100%;
+	max-width: 100%;
+	width: 250px;
+	height: 30%;
+	position: fixed;
+	bottom: 0;
 	overflow: hidden;
-	padding: 60px 0 30px 0;
+	display: flex;
+	flex-flow: row wrap;
 	p,
 	span {
-		color: $white;
+		font-family: $font-header;
 		font-weight: 200;
-		font-size: 18px;
-		line-height: 1.333;
+		font-size: $f-small;
+		line-height: $f-small;
+		align-self: flex-end;
+		width: 100%;
+		margin: 0;
+		display: block;
+	}
+
+	a {
+		color: $green;
+		width: 1.5em;
+		height: 1.5em;
+		font-weight: bold;
+		font-size: 1.5em;
+		padding: 0.1em;
+		text-align: center;
+		margin-right: 5px;
+
+		transition: all ease-in-out 0.25s;
+		&:hover {
+			color: $blue;
+		}
+	}
+
+	.wrap {
+		max-width: 150px;
+		overflow: hidden;
+		display: flex;
+		flex-flow: row wrap;
+	}
+
+	@media (max-width: 1023px) {
+		position: relative;
 	}
 }
