--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,59 +1,95 @@
 header {
 	top: 0;
 	position: fixed;
-	width: 100%;
+	max-width: 100%;
+	width: 250px;
 	z-index: 4;
-	height: 75px;
+	height: calc(100vh - 30%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	@media (max-width: 1023px) {
+		width: 100%;
+		z-index: 4;
+		height: 60px;
+		padding: 0px 15px 0;
+		background: $white;
+		box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.26);
+	}
 }
-
-.nav {
-	ul {
-		position: relative;
+nav {
+	display: block;
+	max-width: 100%;
+	width: 90px;
+	@media (max-width: 1023px) {
+		width: 100%;
+		height: 35px;
+	}
+	a {
 		display: block;
-		align-items: center;
-		margin: 0;
-		padding: 0;
-		float: right;
-		padding-top: 20px;
-		max-width: 100%;
-		height: 75px;
-		li {
-			list-style-type: none;
-			padding: 10px 20px 10px;
-			a {
-				transition: opacity 0.5s ease;
-				opacity: 1;
-				position: absolute;
-				right: 0;
-				font-weight: 200;
-				font-size: 24px;
-				line-height: 1.333;
-				color: #333;
-				padding: 0px 20px 25px;
-				min-width: 100px;
-				text-decoration: none;
-				position: relative;
-				&:hover {
-					color: $white;
-					&:after {
-						position: absolute;
-						content: "";
-						bottom: -3px;
-						left: 0;
-						right: 0;
-						height: 3px;
-						background-color: $white;
-					}
+		width: 60px;
+		height: 35px;
+		list-style-type: none;
+		color: $white;
+		text-decoration: none;
+		overflow: visible;
+		position: relative;
+		transition: all ease-in-out 0.25s;
+		margin-top: 15px;
+		@media (max-width: 1023px) {
+			display: inline-block;
+			margin-right: 10px;
+			margin-top: 0;
+		}
+		span {
+			position: absolute;
+			display: block;
+			overflow: hidden;
+			left: 55px;
+			width: 0;
+			height: 35px;
+			line-height: 2em;
+			background: #191919;
+			transition: all ease-in-out 0.25s;
+		}
+		b {
+			color: $green;
+			background: #191919;
+			height: 35px;
+			width: 60px;
+			display: block;
+			float: left;
+			font-size: 1em;
+			padding: 8px 0;
+			text-align: center;
+			border-radius: 3px;
+			transition: all ease-in-out 0.25s;
+		}
+		&:hover {
+			width: 180px;
+			@media (max-width: 1023px) {
+				width: 165px;
+			}
+			b {
+				color: $blue;
+				border-radius: 3px 0 0 3px;
+			}
+			span {
+				width: calc(100% - 80px);
+				border-radius: 0 3px 3px 0;
+				@media (max-width: 1023px) {
+					width: 110px;
+					border-radius: 0 3px 3px 0;
 				}
 			}
 		}
 	}
-	.icon {
-		height: 69px;
-		padding: 0;
-		float: left;
-		display: block;
-	}
+}
+.icon {
+	height: 69px;
+	padding: 0;
+	float: left;
+	display: block;
 }
 
 @media only screen and (max-width: 640px) {
