--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,102 +1,73 @@
+header,
+footer {
+	position: fixed;
+	max-width: 100%;
+	width: 10em;
+	left: 0;
+	z-index: 4;
+	background: $grey-900;
+	a,
+	p {
+		color: $white;
+		display: block;
+		margin: 1em 1em;
+		text-decoration: none;
+	}
+	a {
+		font-family: $font-header;
+		font-weight: 100;
+		font-size: 1.4em;
+		line-height: 1.4em;
+		overflow: hidden;
+		padding: 0;
+		&:hover span {
+			max-width: 100%;
+		}
+		span {
+			transition: ease all 0.2s;
+			display: block;
+			max-width: 12px;
+			&:hover {
+				animation: textShadow 5.6s infinite;
+				max-width: 100%;
+			}
+			overflow: hidden;
+		}
+		&.green,
+		&.blue,
+		&.yellow,
+		&.orange,
+		&.red {
+			color: $white;
+		}/* 
+		&.green:hover {
+			color: $green;
+		}
+
+		&.blue:hover {
+			color: $blue;
+		}
+
+		&.yellow:hover {
+			color: $yellow;
+		}
+
+		&.orange:hover {
+			color: $orange;
+		}
+
+		&.red:hover {
+			color: $red;
+		} */
+	}
+}
+
 header {
 	top: 0;
-	position: fixed;
-	width: 100%;
-	z-index: 4;
-	height: 75px;
+	height: calc(100vh - 150px);
 }
 
-.nav {
-	ul {
-		position: relative;
-		display: block;
-		align-items: center;
-		margin: 0;
-		padding: 0;
-		float: right;
-		padding-top: 20px;
-		max-width: 100%;
-		height: 75px;
-		li {
-			list-style-type: none;
-			padding: 10px 20px 10px;
-			a {
-				transition: opacity 0.5s ease;
-				opacity: 1;
-				position: absolute;
-				right: 0;
-				font-weight: 200;
-				font-size: 24px;
-				line-height: 1.333;
-				color: #333;
-				padding: 0px 20px 25px;
-				min-width: 100px;
-				text-decoration: none;
-				position: relative;
-				&:hover {
-					color: $white;
-					&:after {
-						position: absolute;
-						content: "";
-						bottom: -3px;
-						left: 0;
-						right: 0;
-						height: 3px;
-						background-color: $white;
-					}
-				}
-			}
-		}
-	}
-	.icon {
-		height: 69px;
-		padding: 0;
-		float: left;
-		display: block;
-	}
-}
-
-@media only screen and (max-width: 640px) {
-	.nav {
-		ul {
-			padding-top: 20px;
-			&.active {
-				top: 75px;
-			}
-		}
-		.container {
-			padding: 0;
-		}
-	}
-}
-
-@media (min-width: 992px) {
-	.nav {
-		ul {
-			display: flex;
-			align-items: center;
-			list-style: none;
-			padding-top: 0px;
-			li {
-				display: inline-block;
-				padding: 0;
-				a {
-					padding: 20px 20px 22px;
-				}
-				&.icon {
-					padding: 0;
-					a {
-						display: block;
-						font-size: 0;
-					}
-				}
-			}
-		}
-	}
-}
-
-@media (max-width: 1200px) {
-	.sub-info .container {
-		padding: 0 10px 0 0;
-	}
+footer {
+	bottom: 0;
+	height: 150px;
 }
