--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,7 @@
 @import "helpers/normalize";
 @import "helpers/typo";
 @import "helpers/defaults";
+@import "helpers/grid";
 @import "components/intro";
 
 @import "components/menu";
