--- a/src/scss/helpers/defaults.scss
+++ b/src/scss/helpers/defaults.scss
@@ -2,6 +2,30 @@
 	box-sizing: border-box;
 }
 
+// smoothing
+
+a,
+code,
+.card,
+.tooltip {
+	transition: $smooth;
+}
+
+$rowspace: 1em;
+
+[class*="col-md-"],
+[class*="col-sm-"] {
+	padding-right: $rowspace;
+	padding-left: $rowspace;
+}
+
+@mixin shadow {
+	border-radius: 3px;
+	&:hover {
+		box-shadow: 0 0px 9px 6px rgb(0 0 0 / 5%);
+	}
+}
+
 .error {
 	display: block;
 	width: 100%;
@@ -21,15 +45,17 @@ footer {
 }
 
 section {
-	min-height: 100vh;
-	width: 600px;
-	max-width: calc(100% - 125px);
+	max-width: calc(100% - 250px);
 	margin: 0 auto;
 	padding: 45px 25px 45px 25px;
 	@media (max-width: 1023px) {
 		max-width: 100%;
 		padding: 15px;
 		margin-top: 60px;
+	}
+	&.intro {
+		max-width: calc(100% - 125px);
+		width: 600px;
 	}
 }
 
