--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,7 +2,7 @@
 @import "helpers/typo";
 @import "helpers/defaults";
 @import "helpers/grid";
-@import "components/intro";
+@import "components/pages";
 
 @import "components/menu";
 @import "components/footer";
