V 1.0.0. - first version vent live

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -44,5 +44,8 @@ footer {
 
 	@media (max-width: 1023px) {
 		position: relative;
+		width: 100%;
+		flex-direction: row-reverse;
+		justify-content: space-between;
 	}
 }
