--- a/src/scss/helpers/defaults.scss
+++ b/src/scss/helpers/defaults.scss
@@ -84,11 +84,22 @@ section {
 		max-width: 100%;
 		padding: 15px;
 		margin-top: 60px;
-		&.projects {
-			padding: 0;
-		}
 		&:nth-of-type(2) {
 			margin-top: 0;
+		}
+	}
+	@media (max-width: 639px) {
+		&.projects, &.list {
+			padding: 0;
+			.row{
+				margin-right: 0;
+				margin-left: 0;
+			}
+			.col-md-4{
+				padding-right: 0;
+				padding-left: 0;
+				padding-bottom: 2em;
+			}
 		}
 	}
 	&.intro {
