--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,51 +1,105 @@
 footer {
-	max-width: 100%;
-	width: 250px;
-	height: 30%;
-	position: fixed;
-	bottom: 0;
-	overflow: hidden;
-	display: flex;
-	flex-flow: row wrap;
-	p,
-	span {
-		font-family: $font-header;
-		font-weight: 200;
-		font-size: $f-small;
-		line-height: $f-small;
-		align-self: flex-end;
-		width: 100%;
+  max-width: 100%;
+  width: 90px;
+  height: 40%;
+  position: fixed;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  flex-flow: row wrap;
+  flex-direction: column;
+  justify-content: flex-end;
+  background: $grey-100;
+  margin: 0 15px 15px 15px;
+  padding-bottom: 15px;
+
+  border-bottom-left-radius: $menu-rad;
+  border-bottom-right-radius: $menu-rad;
+  @media (max-width: 1023px) {
+    background: initial;
+    margin: 0;
+  }
+  p,
+  span {
+    font-family: $font-header;
+    font-weight: 200;
+    font-size: $f-small;
+    line-height: $f-small;
+    align-self: flex-end;
+    width: 100%;
+    margin: 0;
+    display: block;
+  }
+
+  a {
+    color: $green;
+    font-weight: bold;
+    margin-right: 5px;
+    height: 35px;
+    width: 60px;
+    background: #191919;
+    display: block;
+    float: left;
+    font-size: 1em;
+    padding: 8px 0;
+    text-align: center;
+    border-radius: 3px;
+    transition: all ease-in-out 0.25s;
+    margin-top: 15px;
+    &:hover {
+      color: $blue;
+    }
+  }
+
+  .legal {
+    transform-origin: 0 0;
+    transform: rotate(-90deg);
+    margin: 125px 0 -20px 15px;
+    p {
+      padding: 0 0 10px 0;
+    }
+  }
+
+  .wrap {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    .social,
+    .legal {
+      flex: 1;
+    }
+    .social {
+      display: flex;
+      flex-flow: row wrap;
+      flex-direction: row;
+      justify-content: center;
+    }
+    @media (max-width: 1023px) {
+      flex-direction: row;
+      width: 100%;
+      .legal {
+        transform: initial;
+        width: 90px;
 		margin: 0;
-		display: block;
-	}
-
-	a {
-		color: $green;
-		width: 1.5em;
-		height: 1.5em;
-		font-weight: bold;
-		font-size: 1.5em;
-		padding: 0.1em;
-		text-align: center;
-		margin-right: 5px;
-
-		transition: all ease-in-out 0.25s;
-		&:hover {
-			color: $blue;
-		}
-	}
-
-	.wrap {
-		max-width: 150px;
-		overflow: hidden;
+		flex-wrap: nowrap;
+		align-items: flex-end;
 		display: flex;
-		flex-flow: row wrap;
-	}
+		flex-direction: column;
+		justify-content: flex-end;
+      }
+      .social {
+        padding-left: 15px;
+        width: 100%;
+        flex-wrap: nowrap;
+        align-items: flex-end;
+      }
+    }
+  }
 
-	@media (max-width: 1023px) {
-		position: relative;
-		width: 100%;
-		flex-direction: row-reverse;
-		justify-content: space-between;
-	}
+  @media (max-width: 1023px) {
+    position: relative;
+    width: 100%;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
 }
