--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -1,138 +1,154 @@
 header {
-	top: 0;
-	position: fixed;
-	max-width: 100%;
-	width: 250px;
-	z-index: 4;
-	height: calc(100vh - 30%);
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	@media (max-width: 1023px) {
-		width: 100%;
-		z-index: 4;
-		height: 60px;
-		padding: 0px 15px 0;
-		background: $white;
-		box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.26);
-	}
+  top: 0;
+  position: fixed;
+  max-width: 100%;
+  width: 120px;
+  z-index: 4;
+  height: calc(100vh - 40%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  @media (max-width: 1023px) {
+    width: 100%;
+    z-index: 4;
+    height: 60px;
+    padding: 5px;
+  }
 }
 nav {
-	display: block;
-	max-width: 100%;
-	width: 90px;
-	@media (max-width: 1023px) {
-		width: 100%;
-		height: 35px;
-	}
-	a {
-		display: block;
-		width: 60px;
-		height: 35px;
-		list-style-type: none;
-		color: $white;
-		text-decoration: none;
-		overflow: visible;
-		position: relative;
-		transition: all ease-in-out 0.25s;
-		margin-top: 15px;
-		@media (max-width: 1023px) {
-			display: inline-block;
-			margin-right: 10px;
-			margin-top: 0;
-		}
-		span {
-			position: absolute;
-			display: block;
-			overflow: hidden;
-			left: 55px;
-			width: 0;
-			height: 35px;
-			line-height: 2em;
-			background: #191919;
-			transition: all ease-in-out 0.25s;
-		}
-		b {
-			color: $green;
-			background: #191919;
-			height: 35px;
-			width: 60px;
-			display: block;
-			float: left;
-			font-size: 1em;
-			padding: 8px 0;
-			text-align: center;
-			border-radius: 3px;
-			transition: all ease-in-out 0.25s;
-		}
-		&:hover {
-			width: 180px;
-			@media (max-width: 1023px) {
-				width: 165px;
-			}
-			b {
-				color: $blue;
-				border-radius: 3px 0 0 3px;
-			}
-			span {
-				width: calc(100% - 80px);
-				border-radius: 0 3px 3px 0;
-				@media (max-width: 1023px) {
-					width: 110px;
-					border-radius: 0 3px 3px 0;
-				}
-			}
-		}
-	}
+  background: $grey-100;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  max-width: 100%;
+  height: 100%;
+  padding: 20px 15px 0;
+  margin: 15px 15px 0 15px;
+  border-top-left-radius: $menu-rad;
+  border-top-right-radius: $menu-rad;
+  @media (max-width: 1023px) {
+    width: 100%;
+    margin: 0;
+    padding: 0 10px;
+    border-radius: $menu-rad;
+    flex-direction: row;
+    align-items: center;
+    box-shadow: 1px -5px 20px 11px rgba(0, 0, 0, 34%);
+  }
+  a {
+    display: block;
+    width: 60px;
+    height: 35px;
+    list-style-type: none;
+    color: $white;
+    text-decoration: none;
+    overflow: visible;
+    position: relative;
+    transition: all ease-in-out 0.25s;
+    margin-top: 15px;
+    @media (max-width: 1023px) {
+      display: inline-block;
+      margin-right: 10px;
+      margin-top: 0;
+    }
+    span {
+      position: absolute;
+      display: block;
+      overflow: hidden;
+      left: 60px;
+      width: 0;
+      height: 35px;
+      line-height: 2em;
+      background: #191919;
+      transition: all ease-in-out 0.25s;
+    }
+    b {
+      color: $green;
+      background: #191919;
+      height: 35px;
+      width: 60px;
+      display: block;
+      float: left;
+      font-size: 1em;
+      padding: 8px 0;
+      text-align: center;
+      border-radius: 3px;
+      transition: all ease-in-out 0.25s;
+    }
+    &:hover {
+      b {
+        color: $blue;
+        border-radius: 3px 0 0 3px;
+      }
+      span {
+        width: calc(100% - 60px);
+        border-radius: 0 3px 3px 0;
+        @media (max-width: 1023px) {
+          border-radius: 0 3px 3px 0;
+        }
+      }
+    }
+    &.home,
+    &.blog {
+      &:hover {
+        width: 124px;
+      }
+    }
+    &.projects {
+      &:hover {
+        width: 171px;
+      }
+    }
+  }
 }
 .icon {
-	height: 69px;
-	padding: 0;
-	float: left;
-	display: block;
+  height: 69px;
+  padding: 0;
+  float: left;
+  display: block;
 }
 
 @media only screen and (max-width: 640px) {
-	.nav {
-		ul {
-			padding-top: 20px;
-			&.active {
-				top: 75px;
-			}
-		}
-		.container {
-			padding: 0;
-		}
-	}
+  .nav {
+    ul {
+      padding-top: 20px;
+      &.active {
+        top: 75px;
+      }
+    }
+    .container {
+      padding: 0;
+    }
+  }
 }
 
 @media (min-width: 992px) {
-	.nav {
-		ul {
-			display: flex;
-			align-items: center;
-			list-style: none;
-			padding-top: 0px;
-			li {
-				display: inline-block;
-				padding: 0;
-				a {
-					padding: 20px 20px 22px;
-				}
-				&.icon {
-					padding: 0;
-					a {
-						display: block;
-						font-size: 0;
-					}
-				}
-			}
-		}
-	}
+  .nav {
+    ul {
+      display: flex;
+      align-items: center;
+      list-style: none;
+      padding-top: 0px;
+      li {
+        display: inline-block;
+        padding: 0;
+        a {
+          padding: 20px 20px 22px;
+        }
+        &.icon {
+          padding: 0;
+          a {
+            display: block;
+            font-size: 0;
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (max-width: 1200px) {
-	.sub-info .container {
-		padding: 0 10px 0 0;
-	}
+  .sub-info .container {
+    padding: 0 10px 0 0;
+  }
 }
