--- a/src/scss/helpers/defaults.scss
+++ b/src/scss/helpers/defaults.scss
@@ -1,5 +1,5 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 // smoothing
@@ -9,210 +9,206 @@ code,
 .card,
 .tooltip,
 .list {
-	transition: $smooth;
+  transition: $smooth;
 }
 
 [class*="col-md-"],
 [class*="col-sm-"] {
-	padding-right: $rowspace;
-	padding-left: $rowspace;
+  padding-right: $rowspace;
+  padding-left: $rowspace;
 }
 
 @mixin shadow {
-	border-radius: 3px;
-	&:hover {
-		box-shadow: 0 0px 9px 6px rgb(0 0 0 / 5%);
-	}
+  border-radius: 3px;
+  &:hover {
+    box-shadow: 0 0px 9px 6px rgba(0, 0, 0, 0.05);
+  }
 }
 
 img {
-	width: 100%;
+  width: 100%;
 }
 
 .popup {
-	position: fixed;
-	top: 2rem;
-	right: -100%;
-	opacity: 0;
-	background: $black;
-	color: $white;
-	border-radius: 3px;
-	padding: 0.5em;
-	transition: $smooth-longer;
-	p {
-		line-height: 1;
-		margin: 0;
-		code {
-			background: $black;
-			margin-left: 0.5em;
-			color: $green;
-			font-weight: 400;
-		}
-	}
-	&.active {
-		right: 2rem;
-		opacity: 1;
-	}
-	@media (max-width: 1023px) {
-		top: 5em;
-	}
+  position: fixed;
+  top: 2rem;
+  right: -100%;
+  opacity: 0;
+  background: $black;
+  color: $white;
+  border-radius: 3px;
+  padding: 0.5em;
+  transition: $smooth-longer;
+  p {
+    line-height: 1;
+    margin: 0;
+    code {
+      background: $black;
+      margin-left: 0.5em;
+      color: $green;
+      font-weight: 400;
+    }
+  }
+  &.active {
+    right: 2rem;
+    opacity: 1;
+  }
+  @media (max-width: 1023px) {
+    top: 5em;
+  }
 }
 
 .error {
-	display: block;
-	width: 100%;
-	padding: 6em 8em 12em 8em;
-	text-align: center;
+  display: block;
+  width: 100%;
+  padding: 6em 8em 12em 8em;
+  text-align: center;
 }
 div#shadow {
-	overflow: hidden;
+  overflow: hidden;
 }
 .warning {
-	color: $red;
-}
-
-header,
-footer {
-	padding: 15px;
+  color: $red;
 }
 
 section {
-	max-width: calc(100% - 250px);
-	margin: 0 auto;
-	padding: 45px 25px 45px 25px;
-	@media (max-width: 1023px) {
-		max-width: 100%;
-		padding: 15px;
-		margin-top: 60px;
-		&:nth-of-type(2) {
-			margin-top: 0;
-		}
-	}
-	@media (max-width: 639px) {
-		&.projects, &.list {
-			padding: 0;
-			.row{
-				margin-right: 0;
-				margin-left: 0;
-			}
-			.col-md-4{
-				padding-right: 0;
-				padding-left: 0;
-				padding-bottom: 2em;
-			}
-		}
-	}
-	&.intro {
-		max-width: calc(100% - 125px);
-		width: 600px;
-		@media (max-width: 1023px) {
-			max-width: 100%;
-		}
-	}
-	&.full{
-		min-height: calc(100vh - 126px);
-	}
+  max-width: calc(100% - 250px);
+  margin: 0 auto;
+  padding: 45px 25px 45px 25px;
+  @media (max-width: 1023px) {
+    max-width: 100%;
+    padding: 15px;
+    margin-top: 60px;
+    &:nth-of-type(2) {
+      margin-top: 0;
+    }
+  }
+  @media (max-width: 639px) {
+    &.projects,
+    &.list {
+      padding: 0;
+      .row {
+        margin-right: 0;
+        margin-left: 0;
+      }
+      .col-md-4 {
+        padding-right: 0;
+        padding-left: 0;
+        padding-bottom: 2em;
+      }
+    }
+  }
+  &.intro {
+    max-width: calc(100% - 125px);
+    width: 600px;
+    @media (max-width: 1023px) {
+      max-width: 100%;
+    }
+  }
+  &.full {
+    min-height: calc(100vh - 126px);
+  }
 }
 
 .green {
-	background: $green;
+  background: $green;
 }
 
 .blue {
-	background: $blue;
+  background: $blue;
 }
 
 .yellow {
-	background: $yellow;
+  background: $yellow;
 }
 
 .orange {
-	background: $orange;
+  background: $orange;
 }
 
 .black {
-	background: $grey-900;
+  background: $grey-900;
 }
 
 section,
 footer {
-	&.lgrey {
-		background: $grey-050;
-	}
-	&.mgrey {
-		background: $grey-100;
-	}
-	&.mdgrey {
-		background: $grey-700;
-		color: $white;
-	}
-	&.dgrey {
-		background: $grey-900;
-		color: $white;
-	}
+  &.lgrey {
+    background: $grey-050;
+  }
+  &.mgrey {
+    background: $grey-100;
+  }
+  &.mdgrey {
+    background: $grey-700;
+    color: $white;
+  }
+  &.dgrey {
+    background: $grey-900;
+    color: $white;
+  }
 }
 
 // loader
 .spinner {
-	margin: 100px auto;
-	width: 50px;
-	height: 40px;
-	text-align: center;
-	font-size: 10px;
+  margin: 100px auto;
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  font-size: 10px;
 }
 
 .spinner > div {
-	background-color: #333;
-	height: 100%;
-	width: 6px;
-	display: inline-block;
+  background-color: #333;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
 
-	-webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-	animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 
 .spinner .rect2 {
-	-webkit-animation-delay: -1.1s;
-	animation-delay: -1.1s;
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
 }
 
 .spinner .rect3 {
-	-webkit-animation-delay: -1s;
-	animation-delay: -1s;
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
 }
 
 .spinner .rect4 {
-	-webkit-animation-delay: -0.9s;
-	animation-delay: -0.9s;
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
 }
 
 .spinner .rect5 {
-	-webkit-animation-delay: -0.8s;
-	animation-delay: -0.8s;
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
 }
 
 @-webkit-keyframes sk-stretchdelay {
-	0%,
-	40%,
-	100% {
-		-webkit-transform: scaleY(0.4);
-	}
-	20% {
-		-webkit-transform: scaleY(1);
-	}
+  0%,
+  40%,
+  100% {
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    -webkit-transform: scaleY(1);
+  }
 }
 
 @keyframes sk-stretchdelay {
-	0%,
-	40%,
-	100% {
-		transform: scaleY(0.4);
-		-webkit-transform: scaleY(0.4);
-	}
-	20% {
-		transform: scaleY(1);
-		-webkit-transform: scaleY(1);
-	}
+  0%,
+  40%,
+  100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1);
+    -webkit-transform: scaleY(1);
+  }
 }
 
 /*
