--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,24 +1,18 @@
 footer {
   max-width: 100%;
-  width: 90px;
-  height: 40%;
-  position: fixed;
-  bottom: 0;
-  overflow: hidden;
-  display: flex;
-  flex-flow: row wrap;
-  flex-direction: column;
-  justify-content: flex-end;
-  background: $grey-100;
-  margin: 0 15px 15px 15px;
-  padding-bottom: 15px;
+  .wrap {
+    background: $grey-100;
+    margin: 0 15px 15px 15px;
+    padding-bottom: 15px;
 
-  border-bottom-left-radius: $menu-rad;
-  border-bottom-right-radius: $menu-rad;
-  @media (max-width: 1023px) {
-    background: initial;
-    margin: 0;
+    border-bottom-left-radius: $menu-rad;
+    border-bottom-right-radius: $menu-rad;
+    @media (max-width: 1023px) {
+      background: initial;
+      margin: 0;
+    }
   }
+
   p,
   span {
     font-family: $font-header;
@@ -75,29 +69,45 @@ footer {
       justify-content: center;
     }
     @media (max-width: 1023px) {
-      flex-direction: row;
+      flex-direction: row-reverse;
       width: 100%;
+      height: 60px;
+      padding: 5px 10px;
+      p {
+        line-height: 1em;
+        padding: 0 0 8px 0;
+      }
+      .social,
+      .legal {
+        background: $grey-100;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+      }
       .legal {
         transform: initial;
         width: 90px;
-		margin: 0;
-		flex-wrap: nowrap;
-		align-items: flex-end;
-		display: flex;
-		flex-direction: column;
-		justify-content: flex-end;
+        max-width: 90px;
+        margin: 0 0 0 0;
+        flex-direction: column;
+        justify-content: flex-end;
+        padding: 10px 0 0 10px;
+        border-radius: $menu-rad 0 0 $menu-rad;
       }
       .social {
-        padding-left: 15px;
+        margin: 0;
         width: 100%;
-        flex-wrap: nowrap;
-        align-items: flex-end;
+        justify-content: flex-end;
+        padding: 0 5px 0 0;
+        border-radius: 0 $menu-rad $menu-rad 0;
+        a {
+          margin-top: 0;
+        }
       }
     }
   }
 
   @media (max-width: 1023px) {
-    position: relative;
     width: 100%;
     flex-direction: row-reverse;
     justify-content: space-between;
