--- a/src/scss/components/menu.scss
+++ b/src/scss/components/menu.scss
@@ -17,16 +17,12 @@ header {
   }
 }
 nav {
-  background: $grey-100;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   max-width: 100%;
   height: 100%;
   padding: 20px 15px 0;
-  margin: 15px 15px 0 15px;
-  border-top-left-radius: $menu-rad;
-  border-top-right-radius: $menu-rad;
   @media (max-width: 1023px) {
     width: 100%;
     margin: 0;
@@ -51,7 +47,7 @@ nav {
       margin-right: 10px;
       margin-top: 0;
     }
-    span {
+    .label {
       position: absolute;
       display: block;
       overflow: hidden;
@@ -59,7 +55,6 @@ nav {
       width: 0;
       height: 35px;
       line-height: 2em;
-      background: #191919;
       transition: all ease-in-out 0.25s;
     }
     b {
@@ -71,18 +66,22 @@ nav {
       float: left;
       font-size: 1em;
       padding: 8px 0;
-      text-align: center;
+      text-align: left;
       border-radius: 3px;
       transition: all ease-in-out 0.25s;
+      span {
+        display: block;
+        width: 60px;
+        text-align: center;
+      }
     }
     &:hover {
       b {
+        width: 100%;
         color: $blue;
-        border-radius: 3px 0 0 3px;
       }
-      span {
-        width: calc(100% - 60px);
-        border-radius: 0 3px 3px 0;
+      .label {
+        width: 100%;
         @media (max-width: 1023px) {
           border-radius: 0 3px 3px 0;
         }
@@ -91,11 +90,10 @@ nav {
     &.active {
       b {
         color: $blue;
-        border-radius: 3px 0 0 3px;
+        width: 100%;
       }
-      span {
+      .label {
         width: calc(100% - 60px);
-        border-radius: 0 3px 3px 0;
         @media (max-width: 1023px) {
           border-radius: 0 3px 3px 0;
         }
