--- a/src/scss/components/pages.scss
+++ b/src/scss/components/pages.scss
@@ -1,135 +1,135 @@
 .card {
-	padding: 2em;
-	height: 100%;
-	position: relative;
-	@include shadow;
-	.headline {
-		h2,
-		h3 {
-			margin: 0;
-			line-height: 1;
-		}
+  padding: 2em;
+  height: 100%;
+  position: relative;
+  @include shadow;
+  .headline {
+    h2,
+    h3 {
+      margin: 0;
+      line-height: 1;
+    }
 
-		p {
-			margin-top: 0.5em;
-		}
-		.site {
-			position: relative;
-		}
-		.tooltip {
-			visibility: hidden;
-			opacity: 0;
-			background: $black;
-			color: $green;
-			border-radius: 3px;
-			padding: 0.1em 0 0.3em;
-			position: absolute;
-			bottom: 0;
-		}
-		&:hover {
-			img {
-				filter: grayscale(0%);
-			}
-			.tooltip {
-				visibility: visible;
-				opacity: 1;
-				&:hover {
-					color: $blue;
-				}
-			}
-		}
-	}
+    p {
+      margin-top: 0.5em;
+    }
+    .site {
+      position: relative;
+    }
+    .tooltip {
+      visibility: hidden;
+      opacity: 0;
+      background: $black;
+      color: $green;
+      border-radius: 3px;
+      padding: 0.1em 0 0.3em;
+      position: absolute;
+      bottom: 0;
+    }
+    &:hover {
+      img {
+        filter: grayscale(0%);
+      }
+      .tooltip {
+        visibility: visible;
+        opacity: 1;
+        &:hover {
+          color: $blue;
+        }
+      }
+    }
+  }
 
-	img {
-		max-width: 60px;
-		float: left;
-		margin-right: 1em;
-		filter: grayscale(100%);
-	}
-	@media (max-width: 1023px) {
-		padding: 2em 15px;
-		.headline {
-			img {
-				filter: grayscale(0%);
-			}
-			.tooltip {
-				visibility: visible;
-				opacity: 1;
-			}
-		}
-	}
-	h3 {
-		font-family: $font-default;
-	}
+  img {
+    max-width: 60px;
+    float: left;
+    margin-right: 1em;
+    filter: grayscale(100%);
+  }
+  @media (max-width: 1023px) {
+    padding: 2em 15px;
+    .headline {
+      img {
+        filter: grayscale(0%);
+      }
+      .tooltip {
+        visibility: visible;
+        opacity: 1;
+      }
+    }
+  }
+  h3 {
+    font-family: $font-default;
+  }
 
-	p {
-		margin: 0;
-	}
-	.finished {
-		position: absolute;
-		bottom: 2em;
-		right: 2em;
-	}
+  p {
+    margin: 0;
+  }
+  .finished {
+    position: absolute;
+    bottom: 2em;
+    right: 2em;
+  }
 }
 
 .blog,
 .card,
 .intro {
-	a {
-		background: $black;
-		color: $green;
-		text-decoration: none;
-		border-radius: 3px;
-		padding: 0.1em 0 0.3em;
-		&:hover {
-			color: $blue;
-		}
-		&.site {
-			background: none;
-			color: initial;
-			display: block;
-			margin: 0 0 1em 0;
-			width: 100%;
-			overflow: hidden;
-			height: 100px;
-		}
-	}
+  a {
+    background: $black;
+    color: $green;
+    text-decoration: none;
+    border-radius: 3px;
+    padding: 0.1em 0 0.3em;
+    &:hover {
+      color: $blue;
+    }
+    &.site {
+      background: none;
+      color: initial;
+      display: block;
+      margin: 0 0 1em 0;
+      width: 100%;
+      overflow: hidden;
+      height: 100px;
+    }
+  }
 }
 
 .list {
-	padding: 2em;
-	@media (max-width: 1023px) {
-		.row {
-			margin-right: -15px;
-			margin-left: -15px;
-		}
-	}
-	@media (max-width: 639px) {
-		padding: 15px;
+  padding: 2em;
+  @media (max-width: 639px) {
+    padding: 15px;
+  }
+  img {
+    border-radius: 3px;
+  }
+  &:hover {
+    cursor: pointer;
+    border-radius: 3px;
+  }
+  h1,
+  h2,
+  h3,
+  p,
+  .time {
+    display: block;
+    margin-top: 1em;
+    margin-top: 15px;
+  }
+  .time {
+    font-size: $f-smed;
+  }
+  .post {
+    padding: 2rem;
+    margin-bottom: 1rem;
+  }
+}
 
-	}
-	img {
-		border-radius: 3px;
-	}
-	&:hover {
-		cursor: pointer;
-		border-radius: 3px;
-	}
-	h1,
-	h2,
-	h3,
-	p,
-	.time {
-		display: block;
-		margin-top: 1em;
-		margin-top: 15px;
-	}
-	.time {
-		font-size: $f-smed;
-	}
-	.post {
-		padding: 2rem;
-		margin-bottom: 1rem;
-		@include shadow
-	}
+.post,
+.card {
+  background: $white;
+  border-radius: $menu-rad;
+  box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8),
+    10px 10px 24px rgba(166, 180, 200, 0.7);
 }
