--- a/src/scss/helpers/typo.scss
+++ b/src/scss/helpers/typo.scss
@@ -56,7 +56,7 @@ body {
 	text-align: left;
 	margin: 0;
 	transition: all 0.3s ease 0s;
-	background: $white;
+	background: linear-gradient(-134.17deg, #fff 4.98%, #eef0f5 94.88%);
 }
 
 nav {
