--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,9 +1,18 @@
+.mob-only {
+  @media (min-width: 1024px) {
+    display: none;
+  }
+}
+
 footer {
   max-width: 100%;
-  .wrap {
-    @media (max-width: 1023px) {
-      background: initial;
+  @media (max-width: 1023px) {
+    padding: 5px 5px 0 5px;
+    background: none;
+    .wrap {
+      border-radius: $menu-rad;
       margin: 0;
+      background-color: $white;
     }
   }
 
@@ -67,13 +76,14 @@ footer {
       width: 100%;
       height: 60px;
       padding: 5px 10px;
+      box-shadow: $morph-shadow;
+
       p {
         line-height: 1em;
         padding: 0 0 8px 0;
       }
       .social,
       .legal {
-        background: $grey-100;
         display: flex;
         flex-direction: row;
         align-items: center;
