--- a/src/scss/components/pages.scss
+++ b/src/scss/components/pages.scss
@@ -2,7 +2,22 @@
   padding: 2em;
   height: 100%;
   position: relative;
-  @include shadow;
+  p {
+    margin-bottom: 0 0 initial 0;
+  }
+  &:hover {
+    img {
+      filter: grayscale(0%);
+    }
+    .headline .tooltip {
+      visibility: visible;
+      opacity: 1;
+      &:hover {
+        color: $blue;
+      }
+    }
+  }
+
   .headline {
     h2,
     h3 {
@@ -22,21 +37,9 @@
       background: $black;
       color: $green;
       border-radius: 3px;
-      padding: 0.1em 0 0.3em;
+      padding: $link-pad;
       position: absolute;
       bottom: 0;
-    }
-    &:hover {
-      img {
-        filter: grayscale(0%);
-      }
-      .tooltip {
-        visibility: visible;
-        opacity: 1;
-        &:hover {
-          color: $blue;
-        }
-      }
     }
   }
 
@@ -61,10 +64,6 @@
   h3 {
     font-family: $font-default;
   }
-
-  p {
-    margin: 0;
-  }
   .finished {
     position: absolute;
     bottom: 2em;
@@ -80,7 +79,7 @@
     color: $green;
     text-decoration: none;
     border-radius: 3px;
-    padding: 0.1em 0 0.3em;
+    padding: 0 3px 2px 3px;
     &:hover {
       color: $blue;
     }
@@ -97,16 +96,19 @@
 }
 
 .list {
-  padding: 2em;
-  @media (max-width: 639px) {
-    padding: 15px;
-  }
   img {
-    border-radius: 3px;
+    border-radius: $menu-rad;
   }
+
+  .thumb {
+    @media (min-width: 1024px) {
+      padding: 0 1.5rem 0 0;
+    }
+  }
+
   &:hover {
     cursor: pointer;
-    border-radius: 3px;
+    border-radius: 0;
   }
   h1,
   h2,
@@ -117,12 +119,12 @@
     margin-top: 1em;
     margin-top: 15px;
   }
-  .time {
-    font-size: $f-smed;
-  }
   .post {
     padding: 2rem;
     margin-bottom: 1rem;
+    h2 {
+      margin-top: 0;
+    }
   }
 }
 
@@ -130,6 +132,12 @@
 .card {
   background: $white;
   border-radius: $menu-rad;
-  box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8),
-    10px 10px 24px rgba(166, 180, 200, 0.7);
+  @include shadow;
+}
+
+.post {
+  color: $black;
+  &:hover {
+    color: $black;
+  }
 }
