--- a/src/scss/helpers/defaults.scss
+++ b/src/scss/helpers/defaults.scss
@@ -19,9 +19,48 @@ code,
 }
 
 @mixin shadow {
-  border-radius: 3px;
+  transition: $smooth;
+  animation: shadowFadeOut 0.45s;
+  box-shadow: $morph-shadow;
   &:hover {
-    box-shadow: 0 0px 9px 6px rgba(0, 0, 0, 0.05);
+    animation: shadowFadeIn 0.45s;
+    box-shadow: $morph-shadow-hover;
+  }
+}
+
+@keyframes shadowFadeIn {
+  0% {
+    box-shadow: $morph-shadow;
+  }
+  25% {
+    box-shadow: $morph-shadow;
+  }
+  50% {
+    box-shadow: none;
+  }
+  75% {
+    box-shadow: $morph-shadow-hover;
+  }
+  100% {
+    box-shadow: $morph-shadow-hover;
+  }
+}
+
+@keyframes shadowFadeOut {
+  0% {
+    box-shadow: $morph-shadow-hover;
+  }
+  25% {
+    box-shadow: $morph-shadow-hover;
+  }
+  50% {
+    box-shadow: none;
+  }
+  75% {
+    box-shadow: $morph-shadow;
+  }
+  100% {
+    box-shadow: $morph-shadow;
   }
 }
 
@@ -75,15 +114,26 @@ section {
   max-width: calc(100% - 125px);
   width: 600px;
   margin: 0 auto;
-  @media (max-width: 639px) {
-    &.projects,
-    &.list {
-      padding: 0;
+  padding: 4rem 2rem;
+  &.projects {
+    max-width: calc(100% - 125px);
+    width: 850px;
+    @media (max-width: 639px) {
+      max-width: calc(100% - 10px);
+
     }
   }
-
   @media (max-width: 1023px) {
     max-width: 100%;
+    padding: 3rem 2rem;
+    @media (max-width: 639px) {
+      padding: 3rem 15px;
+    }
+  }
+  &.article {
+    @media (max-width: 1023px) {
+      max-width: calc(100% - 10px);
+    }
   }
 }
 
@@ -126,107 +176,85 @@ footer {
 }
 
 // loader
-.spinner {
-  margin: 100px auto;
-  width: 50px;
-  height: 40px;
-  text-align: center;
-  font-size: 10px;
+.lds-ellipsis {
+  display: block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+  margin: 0 auto;
 }
-
-.spinner > div {
-  background-color: #333;
-  height: 100%;
-  width: 6px;
-  display: inline-block;
-
-  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-  animation: sk-stretchdelay 1.2s infinite ease-in-out;
+.lds-ellipsis div {
+  position: absolute;
+  top: 33px;
+  width: 13px;
+  height: 13px;
+  border-radius: 50%;
+  background: $grey-100;
+  animation-timing-function: cubic-bezier(0, 1, 1, 0);
 }
-
-.spinner .rect2 {
-  -webkit-animation-delay: -1.1s;
-  animation-delay: -1.1s;
+.lds-ellipsis div:nth-child(1) {
+  left: 8px;
+  animation: lds-ellipsis1 0.6s infinite;
 }
-
-.spinner .rect3 {
-  -webkit-animation-delay: -1s;
-  animation-delay: -1s;
+.lds-ellipsis div:nth-child(2) {
+  left: 8px;
+  animation: lds-ellipsis2 0.6s infinite;
 }
-
-.spinner .rect4 {
-  -webkit-animation-delay: -0.9s;
-  animation-delay: -0.9s;
+.lds-ellipsis div:nth-child(3) {
+  left: 32px;
+  animation: lds-ellipsis2 0.6s infinite;
 }
-
-.spinner .rect5 {
-  -webkit-animation-delay: -0.8s;
-  animation-delay: -0.8s;
+.lds-ellipsis div:nth-child(4) {
+  left: 56px;
+  animation: lds-ellipsis3 0.6s infinite;
 }
-
-@-webkit-keyframes sk-stretchdelay {
-  0%,
-  40%,
+@keyframes lds-ellipsis1 {
+  0% {
+    transform: scale(0);
+  }
   100% {
-    -webkit-transform: scaleY(0.4);
-  }
-  20% {
-    -webkit-transform: scaleY(1);
+    transform: scale(1);
   }
 }
-
-@keyframes sk-stretchdelay {
-  0%,
-  40%,
+@keyframes lds-ellipsis3 {
+  0% {
+    transform: scale(1);
+  }
   100% {
-    transform: scaleY(0.4);
-    -webkit-transform: scaleY(0.4);
-  }
-  20% {
-    transform: scaleY(1);
-    -webkit-transform: scaleY(1);
+    transform: scale(0);
   }
 }
-
-/*
-div#root:before {
-	content: "";
-	width: 100vw;
-	height: 100vh;
-	box-shadow: inset 0px 0px 0px 5rem rgb(0, 0, 0);
-	display: block;
-	position: fixed;
-	z-index: 3;
-	left: 0;
-	right: 0;
-	top: 0;
-}*/
-
-/*
-body {
-	&:after {
-		animation: grain 8s steps(10) infinite;
-		background-image: url("http://api.thumbr.it/whitenoise-361x370.png?background=000000ff&noise=ffffff&density=61&opacity=10");
-		content: "";
-		height: 300%;
-		left: -50%;
-		opacity: 0.3;
-		position: fixed;
-		top: -100%;
-		width: 300%;
-	}
+@keyframes lds-ellipsis2 {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(24px, 0);
+  }
 }
 
-@keyframes grain {
-  0%, 100% { transform:translate(0, 0) }
-  10% { transform:translate(-5%, -10%) }
-  20% { transform:translate(-15%, 5%) }
-  30% { transform:translate(7%, -25%) }
-  40% { transform:translate(-5%, 25%) }
-  50% { transform:translate(-15%, 10%) }
-  60% { transform:translate(15%, 0%) }
-  70% { transform:translate(0%, 15%) }
-  80% { transform:translate(3%, 35%) }
-  90% { transform:translate(-10%, 10%) }
+/* total width */
+*::-webkit-scrollbar {
+  display: none;
 }
-*/
+
+/* background of the scrollbar except button or resizer */
+*::-webkit-scrollbar-track {
+  display: none;
+}
+
+/* scrollbar itself */
+*::-webkit-scrollbar-thumb {
+  display: none;
+}
+
+/* set button(top and bottom of the scrollbar) */
+*::-webkit-scrollbar-button {
+  display: none;
+}
+
+* {
+  scrollbar-width: none;
+
+}
+
