--- a/src/scss/components/pages.scss
+++ b/src/scss/components/pages.scss
@@ -1,7 +1,19 @@
+.content {
+  .projects,
+  .list {
+    height: 100%;
+    overflow-y: scroll;
+    [class*="col-md-"],
+    [class*="col-sm-"] {
+      margin-bottom: 1rem;
+    }
+  }
+}
 .card {
   padding: 2em;
   height: 100%;
   position: relative;
+  margin-bottom: 1rem;
   p {
     margin-bottom: 0 0 initial 0;
   }
